refactor http adapter
